# PeaceMaker

./: .gitattributes  Cargo.toml  Dioxus.toml  README.md  input.css  tailwind.config.js
.github/workflows/: rust.yml
assets/: main.css
src/: input.css  main.rs
