[package]
name = "ranagrams"
version = "0.1.0"
authors = ["Selyss <99344963+Selyss@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.3", features = ["json"] }
